<resources>
    <string name="app_name">CarTrack Test App</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="select_country">Select Country:</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to user display list -->
    <string name="display_personal_particulars">Personal Particulars</string>
    <string name="display_name">Name: %1$s</string>
    <string name="display_username">User: %1$s</string>
    <string name="display_email">Email: %1$s</string>
    <string name="display_phone">Phone: %1$s</string>
    <string name="display_website">Website: %1$s</string>
    <string name="display_company_desc">Works at:</string>
    <string name="display_company_name">Name: %1$s</string>
    <string name="display_company_phrase">Phrase: %1$s</string>
    <string name="display_company_bs">B.S.: %1$s</string>
    <string name="display_address_desc">Lives at:</string>
    <string name="display_address_full">%1$s, %2$s, %3$s, %4$s</string>
    <string name="display_address_lat_lng">Lat: %1$s, Long: %2$s</string>

</resources>