<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="1dp"
    android:layout_marginVertical="2dp"
    app:strokeColor="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/personal_text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_personal_particulars"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_name"
            android:layout_marginVertical="4dp"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintTop_toBottomOf="@id/personal_text_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_username"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text"
            app:layout_constraintStart_toStartOf="@id/name_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_email"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text"
            app:layout_constraintStart_toStartOf="@id/username_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_phone"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@id/email_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/website_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_website"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_text"
            app:layout_constraintStart_toStartOf="@id/phone_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/company_text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_company_desc"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/company_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_company_name"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/website_text"
            app:layout_constraintTop_toBottomOf="@id/company_text_desc"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/company_phrase_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_company_phrase"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/company_name_text"
            app:layout_constraintTop_toBottomOf="@id/company_name_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/company_bs_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/display_company_bs"
            android:layout_marginBottom="4dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/company_phrase_text"
            app:layout_constraintTop_toBottomOf="@id/company_phrase_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address_text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_bs_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/display_address_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address_full_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_text_desc"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/display_address_full" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address_lat_lng_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_full_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/display_address_lat_lng" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>